Alteração no index

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,7 @@
     <hr>   
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, perferendis. Saepe provident error sit deserunt nostrum sequi obcaecati dolore ut adipisci cum. Laboriosam fuga error quasi dolor laborum atque sit?</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt, ratione placeat! Aut quas doloremque ducimus quaerat laborum blanditiis. Nobis dolorem modi eveniet commodi natus eius delectus eos non vitae sed.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ea molestiae velit rem enim, vitae, magni, iusto laboriosam fuga voluptas aspernatur in ab illo. Iusto delectus eaque earum fugiat minus?</p>
 
 </body>
 </html>
